# maicare-grpc

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  SCHEDULE_RESPONSE_EXAMPLE.json  main.py  makefile  pyproject.toml  pytest.ini  test_schedule_client.py
.github/workflows/: deploy-dev.yml  deploy.yml
care_planner/: generator.py  llm_config.py  planner.py  schema.py
config/: env_config.py  llm_config.py  logging_config.py
spelling_check/: corrector.py  schema.py  service.py
src/: __init__.py
src/api/: __init__.py  care_planner.py  reports.py  schedule.py  spelling_check.py
src/assets/templates/: appointment_card.html
src/core/: __init__.py  config.py  exceptions.py  llm_client.py  logging.py  object_storage_client.py
src/di/: app_module.py
src/models/: __init__.py  domain.py
src/services/: __init__.py
src/services/care_planner/: __init__.py  generator.py  planner.py  schemas.py
src/services/pdf/: generator.py  schema.py
src/services/reports/: schemas.py  service.py
src/services/schedule/: schema.py  service.py
src/services/spelling/: __init__.py  corrector.py  (+1 more)
src/utils/: __init__.py  helpers.py  validators.py
tests/: README.md  conftest.py  test_care_planner.py  test_integration.py
tests/fixtures/: __init__.py  factories.py
tests/integration/: __init__.py  test_grpc_services.py
tests/spelling_check/: test_service_server.py  test_unit_corrector.py
tests/unit/: __init__.py  test_care_planner_generator.py  test_exceptions.py  test_llm_client.py  test_schedule_service.py  test_spelling_corrector.py
